--- a/gallery.css
+++ b/gallery.css
@@ -15,7 +15,7 @@ body {
     z-index: 1000;
     width: 100%;
     height: 10vh;
-    background-color: #313131;
+    background-color: rgba(0, 0, 0, 0.5;
     transition: 0.3s;
 }
 .side-bar a{
